--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name = "right_on_app"
+name = "my-project"
 version = "0.1.0"
+authors = ["Fahad Faruqi <fahadfaruqi1@gmail.com>"]
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-slint = "1.3.2"
+slint = "1.0"
+
+[build-dependencies]
+slint-build = "1.0"
